Mobile: some CSS fixes regarding some mobile devices. Tester's Samsung S4 was clipping right-side content by 10px, viewport fixed this. Also removed (hack) leaflet-control positioning since viewport meta solved it

--- a/application/views/mobile/index.css
+++ b/application/views/mobile/index.css
@@ -5,19 +5,10 @@
 }
 
 
-
-/*** LEAFLET hacks ***/
-
-.leaflet-right .leaflet-control {
-    margin-right: 20px;
-}
-
-
 /*** PAGEs with the trim class, lack some width in favor of a border (border defined in theme: css.phtml) ***/
 div.page-withtrim[data-role="page"] {
     width:calc(100% - 14px);
     margin-right:7px;
-    /* margin-left:7px; */
 }
 
 /*** CUSTOM data-icon for a GPS icon ***/
